--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 #body{
-    font-family: 'Courier New', Courier, monospace;
-
-
+    font-family: 'Raleway', sans-serif;
+    margin: 0;
 }
 nav{
     display: flex;
@@ -11,15 +10,198 @@ nav{
 ul{
     display: flex;
     list-style: none;
-    color:#6a6ae6;  
+    color:#0065FC;  
 } 
 nav img{
     height: 50px;
 }
 nav li {
-    margin: auto;
+    margin: auto 20px;
 }
-mark{
-    background-color: white;
+ mark{
     color: black;
+    background-color:white
+    }
+    /*MAIN*/
+
+    /*recherches*/
+    .rechercheform{
+        display: inline-flex;
+        max-width: 100%;
+        overflow: auto;
+    }
+
+    .ubication{
+        background-color: #f2f2f2;
+        padding: 1rem 1.25rem;
+        border-radius: 1rem 0 0 1rem;
+        text-align: center;
+    }
+    form{
+        margin: top 0em;
+    }
+    .sea{
+        background-color: #0065FC;
+    color: white;
+    font-weight: bold;
+    border: none;
+    border-radius: 0 1rem 1rem 0;
+    padding: 0 1.5rem;
+    font-family: "Raleway", "Sans serif";
+    font-size: 1rem;
+    cursor: pointer;
+}
+    
+    .rechercheformrechercheinput{
+        border-right: none;
+    border-left: none;
+    border-top: #F2F2F2 1px solid;
+    border-bottom: #F2F2F2 1px solid;
+    padding: 0 1.5rem;
+    box-sizing: border-box;
+    width: 14rem;
+    font-size: 1rem;
+    font-weight: bold;
+    font-family: "Raleway", "Sans serif";
+}
+    
+.filtericone{
+    display: flex;
+    margin-top: 20px;
+}
+.filtre {
+    display: flex;
+    align-items: center;
+    margin-right: 2rem;
+    border: 2px solid #F2F2F2;
+    border-radius: 2rem;
+    margin-bottom: 1rem;
+    cursor: pointer;
+    transition-duration: 0.1s;
+    font-weight: bold;
+}
+.icone {
+    color: #0065FC;
+    background-color: #DEEBFF;
+    border-radius: 100%;
+    height: 3rem;
+    width: 3rem;
+    min-height: 3.5rem;
+    min-width: 3.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: -2px;
+}
+
+.titre{
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+/*hebergement*/
+.hbgm{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    width: 100%;
+    text-decoration: none;
+    }
+.hbgmmain{
+    border: solid 2px #f2f2f2;
+    border-radius: 15px;
+    background-color: #F2F2F2;
+    width: 70%;
+    order: 1;
+    }
+.boitehebergement{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding-left: 20px;
+}
+
+.etoile{
+    display: flex;
+}
+.hbgmart{
+    border: solid 3px white;
+    background-color: teal;
+    border-radius: 15px;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    
+
+}
+
+.fig{
+    margin: 0;
+}
+.pht{
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    color: white;
+    width: 100%;
+    height: 210px;
+    width: 290px;
+}
+/*populaires*/
+
+.popumain{
+    border: solid 2px #F2F2F2;
+    border-radius: 15px;
+    background-color: #F2F2F2;
+    width: 27%;
+    order: 2;
+    position: absolute;
+    right: 0px;
+}
+.boitepopulaires{
+    padding: 0 20px;
+    
+}
+.fa-chart-line{
+    text-align: right;
+    padding-left: 120px;
+    position: absolute;
+    right: 20px;
+}
+.popuart{
+    display:flex;
+    border: solid 3px white;
+    border-radius: 15px;
+    background-color: teal;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    max-height: 250px;
+    text-decoration: none;
+    }
+.popuimg{
+        margin: 0;
+    }
+
+.boitepopuetoile{
+    display:
+}
+
+.popupht{
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    width: 110px;
+    height: 130px;
+    object-fit: cover;
+    padding-top: 3px;
+    padding-bottom: 3px;
+
+}
+/*Activités*/
+
+.activite{
+    display: grid;
+    column-gap: 15px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto 15px 15px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+
 }
