--- a/style.css
+++ b/style.css
@@ -212,7 +212,12 @@ nav li {
     
     }
     .boitepopuetoile{
-    margin: 0;
+        display: flex;
+    margin-left: 10px;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 5px;
+    
     }
     .catpopu{
         color: black;
@@ -226,7 +231,7 @@ nav li {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     width: 110px;
-    height: 130px;
+    height: 95%;
     object-fit: cover;
     padding-top: 3px;
     padding-bottom: 0px;
