--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
-#body{
+* { 
+    margin: ;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
     font-family: 'Raleway', sans-serif;
-    margin: 0;
+   min-height: 100vh;
+    min-width: 100vw;
+    margin: 0 auto;
 }
 nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 ul{
     display: flex;
@@ -18,6 +26,9 @@ nav img{
 nav li {
     margin: auto 20px;
 }
+.linav{
+    display: flex;
+}
 .navtitre :hover{
     text-decoration: underline;
 }
@@ -28,10 +39,15 @@ nav li {
     .plus{
         color: black;
         text-decoration: none;
+        font-weight: bold;
     }
     /*MAIN*/
 
     /*recherches*/
+    
+    .recherche{
+    padding: 0 15px;
+    }
     .rechercheform{
         display: inline-flex;
         max-width: 100%;
@@ -87,6 +103,9 @@ nav li {
     transition-duration: 0.1s;
     font-weight: bold;
 }
+.filtericone :hover{
+    background-color: #0065FC;
+}
 .ft{
     border: none;
 }
@@ -118,6 +137,7 @@ nav li {
     flex-direction: row-reverse;
     justify-content: space-between;
     width: 100%;
+    
     }
 .hbgmmain{
     border: solid 2px #f2f2f2;
@@ -149,6 +169,9 @@ nav li {
 }
 .tote{
     text-decoration: none;
+}
+.tote :hover{
+    
 }
 
 .fig{display: block;
@@ -251,6 +274,7 @@ nav li {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto 14rem 2rem 2rem 2rem 14rem;
     margin: 4rem 0;
+
 }
 .activitetitre{
     grid-column: 1/-1;
