--- a/responsivestyle.css
+++ b/responsivestyle.css
@@ -1,28 +1,301 @@
 @media all and (max-device-width: 480px)
 {
-    html{
-        font-size: 100%;
+    .recherche{
+        padding: 0 20px !important;
     }
-    header{
+    nav{
         display: flex;
-        flex-wrap: wrap;
-
+        flex-direction: column;
+    
     }
 
-nav ul{
-    flex-direction: column;
+.navtitre{
+    display: flex;
+    flex-direction:row-reverse;
+    flex-wrap: wrap;
+    justify-content: space-around;
+width: 100% !important;
+}
+.logo{
+width: 100%;
+margin-left: 50px;
+margin-top: 20px;
+}
+.linav{
+    display: flex;
+    flex-direction: row;
+    order: 2;
+    width: 100%;
+    margin-bottom: 20px;
+    
+    padding-top: 40px;
+}
+
+.linavhbgm {
+    border-bottom: 2px solid #0065fc;
+    width: 50%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+.lina{
+    border-bottom: 2px solid #F2F2F2;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+
+}
+.linavi{
+    position: absolute;
+    right: 20px;
+    top: 15px;
+    font-size: 1,2rem;
+    order: 1;
+    width: 45%;
+    text-align: right;
+    padding-top: 0px;
+    margin-top: 20px;
+}
+.rechercheform{
+    height: 40px;
+}
+.fa-map-marker-alt{
+    padding-top: px !important;
+    width: 30px;
+    font-size: 1.2rem;
+}
+input{
+    font-size: 1.2rem;
+    padding-left: 15px;
+    width: 220px;
+    border-radius: 0;
+    box-shadow: none;
+    -webkit-appearance: none;
+    margin: 0;
+}
+button{
+    font-size: 1.2rem;
+    border-left: 2px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    margin: 0;
+    position: relative;
+    left: -15px;
+    height: 100%;
+}
+.seatext{
+    display: none;
 }
 
 .filtericone{
     display: flex;
     flex-wrap: wrap;
-    font-size: 1px;
-    margin-bottom: 20px;
-    padding-left: 5px;
+    font-size: 1.1rem;
+}
+.titre{
+    
+    width: 100%;
+    font-size: 1.1rem;
 }
 
 .filtre{
-    display: inline;
+    margin-bottom: 20px;
+    padding-left: 2px;
 }
+.fas.fa-search{
+    display: inline-block;
+    padding: 0 5px;
+}
+.icone{
+    width: 40px;
+    line-height: 40px;
+    top: 0px;
+}
+.popumain{
+    border-radius: 0px !important;
+    width: 100% !important;
+    position: unset !important;
+    
+    height: 100%;
+
+}
+.poputitre{
+    margin-top: 20px;
+        font-size: 1.4rem;
+}
+.boitepopulaires{
+    width: 100%;
+    
+    
+    margin: 0 auto;
+    padding: 0 !important;
+}
+.popuart{
+    max-height: 200px !important;
+
+    
+}
+.popupht{
+    width: 110px;
+    height: 130px;
+}
+.boitepopuicon{
+    font-size: 1rem;
+        padding-left: 15px;
+}
+.hbgm{
+    display: flex;
+    flex-direction: column !important;
+    align-content: space-between;
+    width: 100% !important;
+}
+.hbgmaside{
+    background-color: #F2F2F2 !important;
+    padding: 0 20px !important;
+}
+.hbgmmain{
+        border: none !important;
+        padding: 0 20px !important;
+        width: 100% !important;
+        margin-top: 1px !important;
+        border-radius: unset !important;
+        background-color: transparent !important;
+}
+.hbgmheader{
+    padding-top: 40px;
+    padding-bottom: 20px;
+    
+    font-size: 
+}
+.boitehebergement{
+    display: grid !important;
+  grid-template-columns: 1fr !important;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+padding-left: unset !important;
+    padding-bottom: 20px !important;
+}
+.hbgmart{
+    width: 100% !important;
+    height: 220px !important;
+    margin: 5px 0 !important;
+}
+.tote{
+    width: 100%;
+    height: 200px;
+    margin: 20px auto 20px auto;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border: solid 2px white;
+    box-shadow: 0px 1px 4px #F2F2F2;
+    
+}
+.fig{
+margin-top: -24px !important;
+}
+.pht{
+    width: 100% !important;
+    height: 120px !important;
+
+}
+.plus{
+    padding-top: 15px !important;
+    padding-left: 10px;
+    font-weight: bold;
+}
+.activite{
+    display: flex !important;
+    flex-direction: column;
+    padding: 0 20px !important;
+  padding: 0 10px;
+  margin: unset !important;
+}
+.activiteTitre{
+    grid-column: 1/-1;
+    
+    padding-top: 15px;
+}
+.boite{
+    display: flex;
+    flex-direction: column;
+    border-radius: 1rem;
+    box-shadow: 0 0 20px;
+    overflow: hidden;
+    transition-duration: 0.1s;
+}
+.imgactivite{
+    position: relative;
+    width: 100%
+}
+.phtactivite{
+    border-radius: unset !important;
+    height: 150px !important;
+    width: 100px;
+    object-fit: cover;
+}
+.boite{
+grid-column: unset !important;
+grid-row: unset !important;
+width: 100%;
+
+height: 200px;
+
+}
+.nomactivite{
+margin: 15px;
+}
+}
+@media screen and (max-width: 768px){
+    .feet{
+        display: flex !important;
+        flex-direction: column !important;
+        align-content: space-around;
+        width: 100%;
+        padding: 0 20px !important;
+    }
+    .boitefeet{
+        margin: 20px;
+    }
+    
+}
+@media screen and (min-width: 768px) and (max-width: 1024px){
+    body{
+        width: 100%;
+    }
+    .hbgm{
+        display: flex !important;
+        flex-direction: column !important;
+        align-content: space-between;
+        width: 100% !important;
+    }
+    .hbgmaside{
+        background-color: #F2F2F2 !important;
+        padding: 0 20px !important;
+    }
+    .hbgmmain{
+            
+            padding: 0 20px !important;
+            width: 100% !important;
+            margin-top: 1px !important;      
+    }
+    .popumain{
+        border-radius: 0px !important;
+        width: 100% !important;
+        position: unset !important;
+        height: 100%;
+    }
+    .activite{
+        display: grid;
+    column-gap: 2rem;
+    margin: 4rem 0;
+        row-gap: 2rem;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto 12rem 12rem;
+    }
+    
+    .boite{
+        
+    }
+
+
 
 }
