--- a/responsivestyle.css
+++ b/responsivestyle.css
@@ -53,7 +53,7 @@ margin-top: 20px;
     order: 1;
     width: 45%;
     text-align: right;
-    padding-top: 0px;
+    padding-top: 0px !important;
     margin-top: 20px;
 }
 .rechercheform{
@@ -283,7 +283,7 @@ margin: 15px;
         position: unset !important;
         height: 100%;
     }
-    .activite{
+    activite{
         display: grid;
     column-gap: 2rem;
     margin: 4rem 0;
