--- a/tablettestyle.css
+++ b/tablettestyle.css
@@ -6,7 +6,7 @@
     }
     .imgactivite{
         position: unset !important;
-
+        height: 30px;
     }
     .phtactivite{
         position: unset !important;
