--- a/responsivestyle.css
+++ b/responsivestyle.css
@@ -18,7 +18,7 @@ width: 100% !important;
 }
 .logo{
 width: 100%;
-margin-left: 50px;
+
 margin-top: 20px;
 }
 .linav{
@@ -49,9 +49,9 @@ margin-top: 20px;
 
 }
 .linavi{
-    position: absolute;
-    right: 20px;
-    top: 15px;
+    
+    
+    padding-right: 10px;
     font-size: 1,2rem;
     order: 1;
     width: 45%;
@@ -59,6 +59,7 @@ margin-top: 20px;
     padding-top: 0px !important;
     margin-top: 20px;
     visibility: visible !important;
+    color: #0065fc;
 }
 .rechercheform{
     height: 40px;
@@ -249,6 +250,19 @@ margin: 15px;
 }
 }
 @media screen and (max-width: 768px){
+    body{
+        padding: 0 20px;
+    }
+    .filtericone{
+        flex-wrap: wrap;
+    }
+    .filtre{
+        border:
+    }
+    .inscription{
+        color: unset !important;
+    }
+    
     .feet{
         display: flex !important;
         flex-direction: column !important;
