--- a/responsivestyle.css
+++ b/responsivestyle.css
@@ -1,5 +1,8 @@
 @media all and (max-device-width: 480px)
 {
+    body{
+        padding: 0 !important;
+    }
     .recherche{
         padding: 0 20px !important;
     }
@@ -153,6 +156,9 @@ button{
     flex-direction: column !important;
     align-content: space-between;
     width: 100% !important;
+}
+.titremarseille{
+    padding-left: 0 !important;
 }
 .hbgmaside{
     background-color: #F2F2F2 !important;
