--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ nav li {
 .filtericone{
     display: flex;
     margin-top: 20px;
+    flex-wrap: wrap;
 }
 .filtre {
     display: flex;
@@ -140,7 +141,9 @@ nav li {
 .ptext{
     padding-left: 5px;
 }
-
+.titre:hover{
+    background-color: unset;
+}
 .titre{
     padding-left: 1rem;
     padding-right: 1rem;
@@ -295,7 +298,6 @@ nav li {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto 14rem 2rem 2rem 2rem 14rem;
     margin: 4rem 0;
-
 }
 .activitetitre{
     grid-column: 1/-1;
@@ -310,14 +312,13 @@ text-decoration: none;
 .imgactivite{
     position: relative;
     flex: 1;
-
 }
 .phtactivite{
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
     position: absolute;
     height: 100%;
-    width: 100%;
+    width: 100% ;
     object-fit: cover;
 }
 .activite1{
