--- a/responsivestyle.css
+++ b/responsivestyle.css
@@ -1,4 +1,4 @@
-@media all and (max-device-width: 480px)
+@media all and (max-width: 767px)
 {
     body{
         padding: 0 !important;
@@ -9,7 +9,6 @@
     nav{
         display: flex;
         flex-direction: column;
-    
     }
 
 .navtitre{
@@ -30,7 +29,6 @@ margin-top: 20px;
     order: 2;
     width: 100%;
     margin-bottom: 20px;
-    
     padding-top: 40px;
 }
 .inscription{
@@ -52,8 +50,6 @@ margin-top: 20px;
 
 }
 .linavi{
-    
-    
     padding-right: 10px;
     font-size: 1,2rem;
     order: 1;
@@ -68,7 +64,6 @@ margin-top: 20px;
     height: 40px;
 }
 .fa-map-marker-alt{
-    padding-top: px !important;
     width: 30px;
     font-size: 1.2rem;
 }
@@ -120,10 +115,9 @@ button{
     top: 0px;
 }
 .popumain{
-    border-radius: 0px !important;
+    border-radius: 0px;
     width: 100% !important;
     position: unset !important;
-    
     height: 100%;
 
 }
@@ -133,15 +127,11 @@ button{
 }
 .boitepopulaires{
     width: 100%;
-    
-    
     margin: 0 auto;
     padding: 0 !important;
 }
 .popuart{
-    max-height: 200px !important;
-
-    
+    max-height: 200px;  
 }
 .popupht{
     width: 110px;
@@ -156,17 +146,18 @@ button{
     flex-direction: column !important;
     align-content: space-between;
     width: 100% !important;
+    padding: unset !important;
 }
 .titremarseille{
     padding-left: 0 !important;
 }
 .hbgmaside{
-    background-color: #F2F2F2 !important;
+    background-color: #F2F2F2;
     padding: 0 20px !important;
 }
 .hbgmmain{
         border: none !important;
-        padding: 0 20px !important;
+        padding: 0 20px;
         width: 100% !important;
         margin-top: 1px !important;
         border-radius: unset !important;
@@ -217,7 +208,6 @@ margin-top: -24px !important;
     display: flex !important;
     flex-direction: column;
     padding: 0 20px !important;
-  padding: 0 10px;
   margin: unset !important;
 }
 .activiteTitre{
