--- a/style.css
+++ b/style.css
@@ -48,9 +48,7 @@ nav li {
     padding-right: 50px;
     
 }
-.navtitre :hover{
-    text-decoration: ;
-}
+
  mark{
     color: black;
     background-color:white
@@ -79,9 +77,7 @@ nav li {
         border-radius: 1rem 0 0 1rem;
         text-align: center;
     }
-    form{
-        margin: top 0em;
-    }
+    
     .sea{
         background-color: #0065FC;
     color: white;
@@ -105,6 +101,9 @@ nav li {
     font-size: 1rem;
     font-weight: bold;
     font-family: "Raleway", "Sans serif";
+}
+.fa-search{
+    visibility: hidden;
 }
     
 .filtericone{
@@ -144,6 +143,13 @@ nav li {
     align-items: center;
     justify-content: center;
     margin: -2px;
+}
+.crl{ background-color: unset;
+    border: 2px solid #DEEBFF;
+    min-width: unset;
+    min-height: unset;
+    height: 1.5rem;
+    width: 1.5rem;
 }
 .ptext{
     padding-left: 5px;
